add detail page route and add template with the read only data

--- a/static/apps/css/base.css
+++ b/static/apps/css/base.css
@@ -166,6 +166,10 @@ input[type=text]:placeholder {
   }
 }
 
+#submit-button-pos{
+  position: absolute;
+}
+
 @keyframes fadeInDown {
   0% {
     opacity: 0;
